--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,37 +1,72 @@
-body {
-    font-family: "Arial", Serif;
-    color: #333;
-    background-color: #ccc;
-    margin: 1em 10%;
-}
-
-h1 {
-    color: #333;
-    background-color: transparent;
-}
-
-a {
-    color: #c60;
-    background-color: transparent;
-    font-weight: bold;
-    text-decoration: none;
-}
-
-ul {
-    padding: 0;
-}
-
-li {
-    float: left;
-    padding: 1em;
-    list-style: none;
-}
-
-img{
+section, header, article, nav {
     display: block;
-    clear: both;
 }
 
-#gallery li{
+* {
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    margin: 1em 10%;
+    background-attachment: fixed;
+    background-position: top left;
+    background-repeat: repeat-x;
+    max-width: 80em;
+}
+
+header {
+    background-repeat: no-repeat;
+    border-width: .1em;
+    border-style: solid;
+    border-bottom-width: 0;
+    border-top-width: 0;
+}
+
+header nav {
+    background-position: bottom left;
+    background-repeat: repeat-x;
+    border-width: .1em;
+    border-style: solid;
+    border-bottom-width: 0;
+    border-top-width: 0;
+}
+
+header nav ul {
+    width: 100%;
+    overflow: hidden;
+    border-left-width: .1em;
+    border-left-style: solid;
+    margin: 0 auto
+}
+
+header nav li {
     display: inline;
+}
+
+header nav li a {
+    display: block;
+    float: left;
+    padding: .5em .2em;
+    border-right: .1em solid;
+}
+
+article {
+    border-width: .1em;
+    border-style: solid;
+    border-top-width: 0;
+    padding: 2em 10%;
+    line-height: 1.8em;
+}
+
+article img {
+    border-width: .1em;
+    border-style: solid;
+    outline-width: .1em;
+    outline-style: solid;
+}
+
+header img {
+    display: block;
+    margin: 0 auto
 }
